fixed sending to wrong email on mobile

--- a/src/AboutMe/aboutMe.css
+++ b/src/AboutMe/aboutMe.css
@@ -17,8 +17,7 @@
   }
 
   .image {
-    width: 80%;
-    height: auto;
+    transform: scale(0.9) !important;
   }
   .text h1 {
     font-size: 2rem;
@@ -31,6 +30,10 @@
     flex-direction: column !important;
     gap: 0rem !important;
     padding-bottom: 3rem;
+  }
+  .summary-text {
+    font-size: 1rem !important;
+    width: 100% !important;
   }
 }
 .text-image {
@@ -96,7 +99,7 @@
   text-align: center;
   margin-top: 3rem;
   margin-bottom: 1rem;
-  width: 70%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   opacity: 0;
